tests/neg/proto/proto-lookup1.ts

/*@ foo :: ({ __proto__: { x: string }, *: number }) => { string | true } */
function foo(o) {
    return o.x;
}

